--- a/littlefs-rs/Cargo.toml
+++ b/littlefs-rs/Cargo.toml
@@ -6,3 +6,4 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+littlefs-rs-sys = "0.1.0"
