--- a/littlefs-rs-sys/Cargo.toml
+++ b/littlefs-rs-sys/Cargo.toml
@@ -6,3 +6,11 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+
+[build-dependencies]
+anyhow = "1"
+cc = "1"
+cty = "0.2.2"
+
+[build-dependencies.bindgen]
+version = "0.63.0"
