--- a/littlefs-rs/Cargo.toml
+++ b/littlefs-rs/Cargo.toml
@@ -6,4 +6,38 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-littlefs-rs-sys = "0.1.0"
+delog = "0.1"
+generic-array = "0.14"
+cty = "0.2.2"
+bitflags = "1"
+heapless = "0.7"
+
+[dependencies.littlefs-rs-sys]
+path = "../littlefs-rs-sys"
+
+[dependencies.serde]
+version = "1"
+default-features = false
+features = ["derive"]
+optional = true
+
+[dependencies.cstr_core]
+version = "0.2.6"
+default-features = false
+
+[features]
+default = ["dir-entry-path", "serde"]
+# use experimental closure-based API
+dir-entry-path = []
+# enable assertions in backend C code
+ll-assertions = ["littlefs-rs-sys/assertions"]
+# enable trace in backend C code
+ll-trace = ["littlefs-rs-sys/trace"]
+c-stubs = []
+
+log-all = []
+log-none = []
+log-info = []
+log-debug = []
+log-warn = []
+log-error = []
