--- a/littlefs-rs-sys/Cargo.toml
+++ b/littlefs-rs-sys/Cargo.toml
@@ -11,12 +11,19 @@ cty = "0.2.2"
 [build-dependencies]
 anyhow = "1"
 cc = "1"
+zip = { version = "0", optional = true }
 
 [build-dependencies.bindgen]
 version = "0.63.0"
 
+[build-dependencies.reqwest]
+version = "0.11"
+features = ["blocking", "json"]
+optional = true
+
 [features]
 default = []
+online = ["reqwest", "zip"]
 no_lib = []
 assert = []
 trace = []
